Prevent stretching of board avatars

--- a/app/account/styles/_board.styl
+++ b/app/account/styles/_board.styl
@@ -77,6 +77,8 @@
 
 .board-preview {
   background: #E5E5E5;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
 
 .board-thumbnail-partial {
